# libmali-rockchip

./: .gitignore  CMakeLists.txt  Makefile  fixup_dummy.sh  fixup_nox11.sh  fixup_wrappers.sh  gbm_wrapper.c  gpu-chips.txt  grabber.sh  meson.build  meson_options.txt  normalize.sh  parse_name.sh  postinst.sh  update_debian.sh
.github/workflows/: Dockerfile  build.yml  build_and_release.yml
data/vulkan/: mali.json.in
debian/: .gitignore  changelog  control  control.in  copyright  lib32mali-rk-midgard-4th-r13p0.install  lib32mali-rk-midgard-4th-r13p0.links  lib32mali-rk-midgard-4th-r9p0.install  lib32mali-rk-utgard-2th-r7p0.install  lib32mali-rk-utgard-2th-r7p0.links  libmali-bifrost-g31-rxp0-gbm-aarch64.install  libmali-bifrost-g31-rxp0-gbm-arm.install  libmali-bifrost-g31-rxp0-gbm.install  libmali-bifrost-g31-rxp0-only-cl-aarch64.install  libmali-bifrost-g31-rxp0-only-cl-arm.install  libmali-bifrost-g31-rxp0-only-cl.install  libmali-bifrost-g31-rxp0-wayland-aarch64.install  libmali-bifrost-g31-rxp0-wayland-arm.install  libmali-bifrost-g31-rxp0-wayland.install  libmali-bifrost-g31-rxp0-without-cl-wayland-aarch64.install  libmali-bifrost-g31-rxp0-without-cl-wayland-arm.install  libmali-bifrost-g31-rxp0-without-cl-wayland.install  libmali-bifrost-g31-rxp0-x11-aarch64.install  libmali-bifrost-g31-rxp0-x11-arm.install  libmali-bifrost-g31-rxp0-x11.install  libmali-bifrost-g52-r25p0-dummy.install  libmali-bifrost-g52-r25p0-wayland.install  libmali-bifrost-g52-r25p0-x11.install  libmali-midgard-t76x-r14p0-r0p0-gbm-arm.install  libmali-midgard-t76x-r14p0-r0p0-gbm.install  libmali-midgard-t76x-r14p0-r0p0-wayland-arm.install  libmali-midgard-t76x-r14p0-r0p0-wayland.install  libmali-midgard-t76x-r14p0-r0p0-x11-arm.install  libmali-midgard-t76x-r14p0-r0p0-x11.install  libmali-midgard-t76x-r14p0-r1p0-gbm-arm.install  libmali-midgard-t76x-r14p0-r1p0-gbm.install  libmali-midgard-t76x-r14p0-r1p0-wayland-arm.install  libmali-midgard-t76x-r14p0-r1p0-wayland.install  libmali-midgard-t76x-r14p0-r1p0-x11-arm.install  libmali-midgard-t76x-r14p0-r1p0-x11.install  (+111 more)
hook/: hook.c  injector.c  meson.build
include/: gbm.h
include/EGL/: egl.h  eglext.h  eglplatform.h
include/FBDEV/: egl.h  eglplatform.h
include/GBM/: README  gbm.h
include/GBM/21.1.0/: gbm.h
include/GLES/: gl.h  glplatform.h
include/GLES2/: gl2.h  gl2platform.h
include/GLES3/: gl3.h  gl31.h  gl32.h  gl3platform.h
include/KHR/: khrplatform.h  mali_khrplatform.h
lib/: libEGL.so.1.0.0
lib/arm-linux-gnueabihf/: libmali-utgard-400-r7p0-r1p1-wayland-1
overlay/: S10libmali_px3se  S10libmali_rk3288  px3seBase
pkgconfig/: egl.pc  gbm.pc  glesv2.pc  glesv2.pc.cmake  mali.pc.cmake
scripts/: fixup_cl.sh  fixup_dummy.sh  fixup_dynsym.py  fixup_egl_nox11.sh  fixup_gbm.sh  fixup_nowrap.sh  fixup_nox11.sh  fixup_sym.py  grabber.sh  normalize.sh  normalize_dependencies.sh  parse_name.sh  update_debian.sh
src/: gbm_wrapper.c
