cmake_minimum_required(VERSION 2.6)
find_package(PkgConfig)

PROJECT(libmali C)
INCLUDE(GNUInstallDirs)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/egl.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/egl.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/gbm.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/gbm.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/glesv2.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc" @ONLY)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib/libmali-midgard.so"
DESTINATION "${CMAKE_INSTALL_LIBDIR}")

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib/libmali-utgard.so"
DESTINATION "${CMAKE_INSTALL_LIBDIR}")

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/egl.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/gbm.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/gbm.h"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/GLES"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/GLES2"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/GLES3"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/KHR"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

