cmake_minimum_required(VERSION 2.6)
find_package(PkgConfig)

PROJECT(libmali C)
INCLUDE(GNUInstallDirs)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/egl.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/egl.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/gbm.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/gbm.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/glesv2.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/mali.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/mali.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/wayland-egl.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/wayland-egl.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/OpenCL.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/OpenCL.pc" @ONLY)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/mali.icd"
DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/OpenCL/vendors/")

INSTALL(DIRECTORY
"${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_LIBRARY_ARCHITECTURE}/"
DESTINATION "${CMAKE_INSTALL_LIBDIR}")

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/egl.pc"
"${CMAKE_CURRENT_BINARY_DIR}/gbm.pc"
"${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc"
"${CMAKE_CURRENT_BINARY_DIR}/mali.pc"
"${CMAKE_CURRENT_BINARY_DIR}/wayland-egl.pc"
"${CMAKE_CURRENT_BINARY_DIR}/OpenCL.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/gbm.h"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/EGL"
"${CMAKE_CURRENT_SOURCE_DIR}/include/GLES"
"${CMAKE_CURRENT_SOURCE_DIR}/include/GLES2"
"${CMAKE_CURRENT_SOURCE_DIR}/include/GLES3"
"${CMAKE_CURRENT_SOURCE_DIR}/include/KHR"
"${CMAKE_CURRENT_SOURCE_DIR}/include/CL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/")

